--- a/src/main/resources/fxml/welcome.fxml
+++ b/src/main/resources/fxml/welcome.fxml
@@ -75,7 +75,7 @@
                                                 <Font name="System Bold" size="18.0" />
                                              </font>
                                           </Label>
-                                          <TextField fx:id="signInPasswordField" alignment="CENTER" promptText="Enter your Password" styleClass="fields" />
+                                          <PasswordField fx:id="signInPasswordField" alignment="CENTER" promptText="Enter your Password" styleClass="fields" />
                                           <FlowPane hgap="10.0" prefHeight="94.0" prefWidth="312.0" vgap="10.0">
                                              <children>
                                                 <JFXButton fx:id="one_btn" onAction="#DigitOneEvent" styleClass="password-button" text="1" />
@@ -145,11 +145,11 @@
                                              </VBox.margin>
                                           </TextField>
                                           <Label layoutX="30.0" layoutY="140.0" styleClass="fields-label" text="Device Password" />
-                                          <TextField fx:id="signUpDevicePasswordField" layoutX="30.0" layoutY="156.0" promptText="Set a password for your device" styleClass="fields">
+                                          <PasswordField fx:id="signUpDevicePasswordField" layoutX="30.0" layoutY="156.0" promptText="Set a password for your device" styleClass="fields">
                                              <VBox.margin>
                                                 <Insets top="-20.0" />
                                              </VBox.margin>
-                                          </TextField>
+                                          </PasswordField>
                                           <JFXButton id="registerAccountBtn" fx:id="registerAccountBtn" onAction="#RegisterAccountEvent" prefHeight="25.0" prefWidth="373.0" styleClass="main-button" text="Register Account">
                                              <VBox.margin>
                                                 <Insets top="10.0" />
