Update Profile UI,Image Upload  developed

--- a/src/main/resources/styles/styles.css
+++ b/src/main/resources/styles/styles.css
@@ -38,7 +38,7 @@
 
 
 .main-panel {
-    -fx-background-image: url("../images/background.jpg");
+    -fx-background-color: white;
 }
 
 .app-title {
