--- a/src/main/resources/styles/appHome.css
+++ b/src/main/resources/styles/appHome.css
@@ -3,20 +3,11 @@
   -fx-background-color: white;
 }
 
-.small-lettering{
-    -fx-text-fill: #757575;
-    -fx-font-Size: 13px;
-    -fx-font-weight: bold;
-}
-.medium-lettering{
-    -fx-text-fill: #4d4d4d;
-    -fx-font-Size: 16px;
-    -fx-font-weight: bold;
-}
 
 .pane-background{
-    -fx-background-color: #f5f5f5;
+    -fx-background-color: #fafafa;
 }
+
 .cards{
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
     -fx-background-color: white;
@@ -45,9 +36,7 @@
 
 .module-title {
     -fx-text-fill: #4d4d4d;
-    -fx-font-family: Candara;
-    -fx-font-Size: 20px;
-    -fx-font-weight: bold;
+
     -fx-effect: dropshadow( gaussian , rgba(255,255,255,0.5) , 0,0,0,1 );
 }
 
