--- a/src/main/resources/fxml/profileConfig.fxml
+++ b/src/main/resources/fxml/profileConfig.fxml
@@ -4,17 +4,15 @@
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Rectangle?>
 
-
-<AnchorPane prefHeight="436.0" prefWidth="646.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.ProfileViewController">
+<AnchorPane prefHeight="468.0" prefWidth="405.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.ProfileViewController">
    <children>
       <StackPane fx:id="stackPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -24,7 +22,7 @@
                      <children>
                         <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                            <children>
-                              <Label fx:id="appTitleLbl" styleClass="module-title" text="Profile">
+                              <Label fx:id="appTitleLbl" text="Profile">
                                  <graphic>
                                     <MaterialDesignIconView fill="#3e4b75" glyphName="ACCOUNT_CIRCLE" size="20" stroke="BLACK" />
                                  </graphic>
@@ -34,7 +32,10 @@
                               <Insets />
                            </HBox.margin>
                         </HBox>
-                        <JFXButton fx:id="closeBtn" onAction="#CloseSceneEvent" prefHeight="23.0" prefWidth="29.0" styleClass="closeButton" text="x" />
+                        <JFXButton fx:id="closeBtn" contentDisplay="GRAPHIC_ONLY" onAction="#CloseSceneEvent" prefHeight="23.0" prefWidth="29.0" ripplerFill="#ff3300" text="x">
+                           <graphic>
+                              <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="16" />
+                           </graphic></JFXButton>
                      </children>
                      <padding>
                         <Insets left="10.0" right="10.0" top="5.0" />
@@ -50,17 +51,17 @@
                         <Insets left="10.0" right="10.0" />
                      </BorderPane.margin>
                      <children>
-                        <Label prefHeight="17.0" prefWidth="290.0" styleClass="module-description" text="Here you can edit your profile" />
+                        <Label fx:id="appDescriptionLbl" prefHeight="17.0" prefWidth="290.0" text="Here you can edit your profile" />
                         <HBox prefHeight="86.0" prefWidth="616.0">
                            <VBox.margin>
                               <Insets top="20.0" />
                            </VBox.margin>
                            <children>
-                              <Circle fx:id="circluarImageView" fill="#d3cfcf" radius="53.0" stroke="#ebe8e8" strokeType="INSIDE" />
+                              <Rectangle fx:id="circularImageView" arcHeight="20.0" arcWidth="20.0" fill="#adc3f7" height="92.0" stroke="#adc3f7" strokeType="INSIDE" width="100.0" />
                               <VBox alignment="CENTER" prefHeight="106.0" prefWidth="254.0" spacing="10.0">
                                  <children>
-                                    <JFXButton fx:id="uploadDeviceImageBtn" onAction="#HandleUploadDeviceImage" prefHeight="31.0" prefWidth="229.0" styleClass="uploadPhotoBtn" text="Upload Device Image" />
-                                    <JFXButton fx:id="defaultImageBtn" layoutX="18.0" layoutY="48.0" onAction="#HandleDefaultImage" prefHeight="29.0" prefWidth="229.0" styleClass="defaultPhotoBtn" text="Set Default Device Image" />
+                                    <JFXButton fx:id="uploadDeviceImageBtn" onAction="#HandleUploadDeviceImage" prefHeight="31.0" prefWidth="229.0" styleClass="defaultPhotoBtn" text="Upload Device Image" />
+                                    <JFXButton fx:id="defaultImageBtn" layoutX="18.0" layoutY="48.0" onAction="#HandleDefaultImage" prefHeight="29.0" prefWidth="229.0" styleClass="secondaryButton" text="Set Default Device Image" />
                                  </children>
                               </VBox>
                            </children>
@@ -76,22 +77,15 @@
                                     <TextField fx:id="nameField" promptText="Enter your name" styleClass="fields" />
                                     <Label layoutX="10.0" layoutY="10.0" styleClass="fields-label" text="Mobile Number">
                                        <VBox.margin>
-                                          <Insets top="25.0" />
+                                          <Insets top="20.0" />
                                        </VBox.margin>
                                     </Label>
                                     <TextField fx:id="mobileNumberField" layoutX="10.0" layoutY="27.0" promptText="Enter your mobile number" styleClass="fields" />
-                                 </children>
-                              </VBox>
-                              <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
-                                 <children>
-                                    <Label styleClass="fields-label" text="Device Name" />
-                                    <TextField fx:id="deviceNameField" promptText="Enter a name for your device (be creative)" styleClass="fields" />
-                                    <Label layoutX="10.0" layoutY="10.0" styleClass="fields-label" text="Password">
+                                    <Label styleClass="fields-label" text="Device Name">
                                        <VBox.margin>
-                                          <Insets top="25.0" />
-                                       </VBox.margin>
-                                    </Label>
-                                    <PasswordField fx:id="passwordField" promptText="Enter your password" styleClass="fields" />
+                                          <Insets top="20.0" />
+                                       </VBox.margin></Label>
+                                    <TextField fx:id="deviceNameField" promptText="Enter a name for your device (be creative)" styleClass="fields" />
                                  </children>
                               </VBox>
                            </children>
