--- a/src/main/resources/fxml/pomodoreConfig.fxml
+++ b/src/main/resources/fxml/pomodoreConfig.fxml
@@ -1,27 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="650.0" prefWidth="1021.0" styleClass="background" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.PomodoreConfigController">
+<AnchorPane prefHeight="489.0" prefWidth="411.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.PomodoreConfigController">
    <children>
-      <StackPane fx:id="stackPane" layoutX="411.0" layoutY="250.0" prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane fx:id="stackPane" layoutX="411.0" layoutY="250.0" prefHeight="150.0" prefWidth="405.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox fx:id="vBox" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0">
+            <VBox fx:id="vBox" alignment="CENTER" prefHeight="650.0" prefWidth="832.0">
                <children>
-                  <VBox prefHeight="498.0" prefWidth="403.0" spacing="20.0">
+                  <VBox prefHeight="498.0" prefWidth="403.0" spacing="20.0" styleClass="background">
                      <children>
                         <HBox prefHeight="24.0" prefWidth="981.0">
                            <children>
-                              <Label prefHeight="17.0" prefWidth="200.0" styleClass="title" text="Settings" />
+                              <Label prefHeight="26.0" prefWidth="345.0" styleClass="title" text="Settings" HBox.hgrow="ALWAYS" />
+                              <JFXButton fx:id="stageCloseBtn" contentDisplay="GRAPHIC_ONLY" ripplerFill="#ff5e00">
+                                 <graphic>
+                                    <MaterialDesignIconView glyphName="WINDOW_CLOSE" size="17" />
+                                 </graphic>
+                              </JFXButton>
                            </children>
                         </HBox>
                         <Label styleClass="settings-label" text="Maximum Ongoing Projects" />
@@ -81,17 +85,14 @@
                      <padding>
                         <Insets bottom="20.0" left="20.0" right="20.0" top="15.0" />
                      </padding>
-                     <effect>
-                        <DropShadow color="#ccd4ff" height="25.0" radius="9.5" width="15.0" />
-                     </effect>
-                     <styleClass>
-                        <String fx:value="background" />
-                        <String fx:value="background-radius" />
-                     </styleClass>
                   </VBox>
                </children>
             </VBox>
          </children>
       </StackPane>
    </children>
+   <styleClass>
+      <String fx:value="background" />
+      <String fx:value="border" />
+   </styleClass>
 </AnchorPane>
