--- a/src/main/resources/fxml/welcome.fxml
+++ b/src/main/resources/fxml/welcome.fxml
@@ -72,15 +72,19 @@
                      <children>
                         <VBox>
                            <children>
-                              <Label fx:id="appTitleLbl" styleClass="app-title" text="Let's get back to it!" />
-                              <Label fx:id="appDecriptionLbl" styleClass="app-title-message" text="Genius is three quarters drudgery">
-                                 <padding>
-                                    <Insets bottom="5.0" top="5.0" />
-                                 </padding>
+                              <VBox>
+                                 <children>
+                                    <Label fx:id="appTitleLbl" styleClass="app-title" text="Let's get back to it!" />
+                                    <Label fx:id="appDecriptionLbl" styleClass="app-title-message" text="Genius is three quarters drudgery">
+                                       <padding>
+                                          <Insets bottom="5.0" top="5.0" />
+                                       </padding>
+                                    </Label>
+                                 </children>
                                  <VBox.margin>
-                                    <Insets top="5.0" />
+                                    <Insets top="20.0" />
                                  </VBox.margin>
-                              </Label>
+                              </VBox>
                               <VBox fx:id="imgPane" alignment="CENTER" prefHeight="615.0" prefWidth="459.0" spacing="20.0">
                                  <children>
                                     <ImageView fitHeight="401.0" fitWidth="330.0" pickOnBounds="true" preserveRatio="true">
@@ -92,49 +96,6 @@
                         </VBox>
                         <StackPane fx:id="stackPane" prefHeight="675.0" prefWidth="403.0">
                            <children>
-                              <VBox fx:id="fpPane" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0">
-                                 <children>
-                                    <VBox prefHeight="328.0" prefWidth="354.0" spacing="20.0" styleClass="pane-background">
-                                       <padding>
-                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                       </padding>
-                                       <children>
-                                          <Label styleClass="title-label" text="Forgot Password ?" />
-                                          <Label styleClass="fields-label" text="Mobile Number">
-                                             <VBox.margin>
-                                                <Insets bottom="-20.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <TextField fx:id="fpMobileNumber" promptText="Enter your mobile number" styleClass="fields" />
-                                          <Label layoutX="30.0" layoutY="77.0" styleClass="fields-label" text="New Password" />
-                                          <PasswordField fx:id="fpPasswordField" promptText="Set your new password" styleClass="fields">
-                                             <VBox.margin>
-                                                <Insets top="-20.0" />
-                                             </VBox.margin>
-                                          </PasswordField>
-                                          <Label layoutX="30.0" layoutY="140.0" styleClass="fields-label" text="Confirm New Password">
-                                             <VBox.margin>
-                                                <Insets bottom="-20.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                          <PasswordField fx:id="fpConfirmPasswordField" layoutX="30.0" layoutY="156.0" promptText="Confirm your new password" styleClass="fields" />
-                                          <JFXButton fx:id="resetPassword" onAction="#HandleResetPassword" prefHeight="25.0" prefWidth="361.0" styleClass="main-button" text="Reset Password">
-                                             <VBox.margin>
-                                                <Insets top="10.0" />
-                                             </VBox.margin>
-                                          </JFXButton>
-                                          <Label fx:id="fpSignInLabel" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#SignIntoAccountEvent" prefHeight="17.0" prefWidth="368.0" styleClass="general-labels" text="Sign In to account">
-                                             <cursor>
-                                                <Cursor fx:constant="HAND" />
-                                             </cursor>
-                                             <VBox.margin>
-                                                <Insets top="-5.0" />
-                                             </VBox.margin>
-                                          </Label>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                              </VBox>
                               <VBox fx:id="registerPane" alignment="CENTER" fillWidth="false" prefHeight="525.0" prefWidth="241.0">
                                  <children>
                                     <VBox prefHeight="397.0" prefWidth="352.0" spacing="20.0" styleClass="pane-background">
@@ -176,6 +137,49 @@
                                        <padding>
                                           <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                                        </padding>
+                                    </VBox>
+                                 </children>
+                              </VBox>
+                              <VBox fx:id="fpPane" alignment="CENTER" fillWidth="false" prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <VBox prefHeight="328.0" prefWidth="354.0" spacing="20.0" styleClass="pane-background">
+                                       <padding>
+                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                                       </padding>
+                                       <children>
+                                          <Label styleClass="title-label" text="Forgot Password ?" />
+                                          <Label styleClass="fields-label" text="Mobile Number">
+                                             <VBox.margin>
+                                                <Insets bottom="-20.0" />
+                                             </VBox.margin>
+                                          </Label>
+                                          <TextField fx:id="fpMobileNumber" promptText="Enter your mobile number" styleClass="fields" />
+                                          <Label layoutX="30.0" layoutY="77.0" styleClass="fields-label" text="New Password" />
+                                          <PasswordField fx:id="fpPasswordField" promptText="Set your new password" styleClass="fields">
+                                             <VBox.margin>
+                                                <Insets top="-20.0" />
+                                             </VBox.margin>
+                                          </PasswordField>
+                                          <Label layoutX="30.0" layoutY="140.0" styleClass="fields-label" text="Confirm New Password">
+                                             <VBox.margin>
+                                                <Insets bottom="-20.0" />
+                                             </VBox.margin>
+                                          </Label>
+                                          <PasswordField fx:id="fpConfirmPasswordField" layoutX="30.0" layoutY="156.0" promptText="Confirm your new password" styleClass="fields" />
+                                          <JFXButton fx:id="resetPassword" onAction="#HandleResetPassword" prefHeight="25.0" prefWidth="361.0" styleClass="main-button" text="Reset Password">
+                                             <VBox.margin>
+                                                <Insets top="10.0" />
+                                             </VBox.margin>
+                                          </JFXButton>
+                                          <Label fx:id="fpSignInLabel" alignment="CENTER" contentDisplay="CENTER" onMouseClicked="#SignIntoAccountEvent" prefHeight="17.0" prefWidth="368.0" styleClass="general-labels" text="Sign In to account">
+                                             <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                             </cursor>
+                                             <VBox.margin>
+                                                <Insets top="-5.0" />
+                                             </VBox.margin>
+                                          </Label>
+                                       </children>
                                     </VBox>
                                  </children>
                               </VBox>
