--- a/src/main/resources/fxml/deadlineCard.fxml
+++ b/src/main/resources/fxml/deadlineCard.fxml
@@ -2,13 +2,10 @@
 
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import java.lang.String?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
 <VBox fx:id="cardPane" prefHeight="220.0" prefWidth="252.0" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox alignment="CENTER_RIGHT" prefHeight="37.0" prefWidth="227.0">
@@ -28,7 +25,17 @@
                         <Label fx:id="cardTaskDescriptionLbl" alignment="TOP_LEFT" text="Task Description" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                      </children>
                   </AnchorPane>
-                  <Label fx:id="cardDueDateLbl" layoutX="10.0" layoutY="10.0" text="Due Date" />
+                   <HBox spacing="4.0">
+                       <children>
+                           <Label fx:id="cardDueDateLbl" prefHeight="17.0" prefWidth="54.0" text="Due Date"/>
+                           <Label fx:id="cardDueDateLblValue" layoutX="10.0" layoutY="10.0" prefHeight="17.0"
+                                  prefWidth="83.0" text="Due Date" HBox.hgrow="ALWAYS">
+                               <HBox.margin>
+                                   <Insets/>
+                               </HBox.margin>
+                           </Label>
+                       </children>
+                   </HBox>
                </children>
                <HBox.margin>
                   <Insets left="10.0" />
