Task UI created

--- a/src/main/resources/styles/modules.css
+++ b/src/main/resources/styles/modules.css
@@ -60,7 +60,7 @@
 .uploadPhotoBtn{
     -fx-text-fill: black;
     -fx-font-Size: 13px;
-    -fx-font-weight: bold;
+    -fx-font-weight: 300;
     -fx-background-color: #B2C0D2;
     -fx-background-radius: 7px;
 }
@@ -91,7 +91,7 @@
     -fx-background-color: #2F4475;
     -fx-text-fill: white;
     -fx-font-Size: 13px;
-    -fx-font-weight: bold;
+    -fx-font-weight: 700;
     -fx-background-radius: 5;
 }
 
@@ -135,3 +135,16 @@
     -fx-stroke:  #19982D;
     -fx-stroke-width: 10;
 }
+
+.white-bg{
+    -fx-background-color: white;
+ }
+ .progress-bar > .bar{
+     -fx-background-color: #254575;
+     -fx-background-radius: 0 10 10 0;
+ }
+
+ .progress-bar > .track{
+     -fx-background-color: #bdbdbd;
+ }
+
