--- a/src/main/resources/fxml/taskDashboard.fxml
+++ b/src/main/resources/fxml/taskDashboard.fxml
@@ -1,74 +1,73 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXSpinner?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import de.jensd.fx.glyphs.materialdesignicons.MaterialDesignIconView?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<AnchorPane prefHeight="560.0" prefWidth="981.0" styleClass="background" stylesheets="@../styles/modules.css"
-            xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.o4codes.controllers.TaskDashboardController">
+
+<AnchorPane prefHeight="560.0" prefWidth="981.0" styleClass="background" stylesheets="@../styles/modules.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.o4codes.controllers.TaskDashboardController">
     <children>
-        <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
-                   AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <StackPane prefHeight="150.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <Label text="{Project Name}">
+                        <Label fx:id="projectTitleLbl" text="{Project Name}">
                             <font>
-                                <Font size="25.0"/>
+                                <Font size="25.0" />
                             </font>
                         </Label>
                         <HBox prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                             <VBox.margin>
-                                <Insets top="10.0"/>
+                                <Insets top="10.0" />
                             </VBox.margin>
                             <children>
                                 <VBox prefHeight="479.0" prefWidth="573.0">
                                     <children>
                                         <AnchorPane prefHeight="115.0" prefWidth="398.0">
                                             <children>
-                                                <Label alignment="TOP_LEFT" layoutX="269.0" layoutY="84.0"
-                                                       text="Project Description" AnchorPane.bottomAnchor="0.0"
-                                                       AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-                                                       AnchorPane.topAnchor="0.0">
+                                                <Label fx:id="projectDescriptionLbl" alignment="TOP_LEFT" layoutX="269.0" layoutY="84.0" text="Project Description" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                                     <padding>
-                                                        <Insets bottom="10.0" right="10.0" top="10.0"/>
+                                                        <Insets bottom="10.0" right="10.0" top="10.0" />
                                                     </padding>
                                                 </Label>
                                             </children>
                                         </AnchorPane>
-                                        <Label text="Created two weeks ago"/>
-                                        <Label prefHeight="37.0" prefWidth="79.0" text="Due">
+                                        <Label fx:id="projectCreationDateLbl" text="Created two weeks ago" />
+                                        <Label fx:id="dueDateTitleLbl" prefHeight="37.0" prefWidth="208.0" text="Due">
                                             <padding>
-                                                <Insets top="20.0"/>
+                                                <Insets top="20.0" />
                                             </padding>
                                         </Label>
-                                        <Label prefHeight="17.0" prefWidth="255.0" text="Date of due"/>
+                                        <Label fx:id="projectDueDateLbl" prefHeight="17.0" prefWidth="255.0" text="Date of due" />
                                         <HBox prefHeight="100.0" prefWidth="200.0">
                                             <VBox.margin>
-                                                <Insets bottom="40.0" top="20.0"/>
+                                                <Insets bottom="40.0" top="20.0" />
                                             </VBox.margin>
                                             <children>
-                                                <JFXSpinner prefHeight="100.0" prefWidth="135.0" progress="0.65"
-                                                            styleClass="progressSpinner"/>
+                                                <JFXSpinner fx:id="projectSpinnerLbl" prefHeight="100.0" prefWidth="135.0" progress="0.65" styleClass="progressSpinner" />
                                                 <VBox prefHeight="100.0" prefWidth="270.0" HBox.hgrow="ALWAYS">
                                                     <HBox.margin>
-                                                        <Insets/>
+                                                        <Insets />
                                                     </HBox.margin>
                                                     <padding>
-                                                        <Insets top="10.0"/>
+                                                        <Insets top="10.0" />
                                                     </padding>
                                                     <children>
-                                                        <Label prefHeight="17.0" prefWidth="206.0" text="2/13 Tasks"/>
-                                                        <Label text="2H 32m / 40H 14m">
+                                                        <Label fx:id="taskFractionProgressLbl" prefHeight="17.0" prefWidth="206.0" text="2/13 Tasks" />
+                                                        <Label fx:id="timeFractionProgressLbl" text="2H 32m / 40H 14m">
                                                             <VBox.margin>
-                                                                <Insets top="30.0"/>
+                                                                <Insets top="30.0" />
                                                             </VBox.margin>
                                                         </Label>
                                                     </children>
@@ -77,63 +76,43 @@
                                         </HBox>
                                         <HBox alignment="CENTER">
                                             <children>
-                                                <JFXButton contentDisplay="RIGHT" graphicTextGap="7.0" prefHeight="29.0"
-                                                           prefWidth="173.0" styleClass="uploadPhotoBtn"
-                                                           text="Edit Project Details">
+                                                <JFXButton fx:id="editProjectDetailsBtn" contentDisplay="RIGHT" graphicTextGap="7.0" onAction="#EditProjectDetailsEvent" prefHeight="29.0" prefWidth="173.0" styleClass="uploadPhotoBtn" text="Edit Project Details">
                                                     <graphic>
-                                                        <MaterialDesignIconView glyphName="PENCIL" size="15"/>
+                                                        <MaterialDesignIconView glyphName="PENCIL" size="15" />
                                                     </graphic>
                                                 </JFXButton>
                                             </children>
                                         </HBox>
                                     </children>
                                 </VBox>
-                                <Separator orientation="VERTICAL" prefHeight="200.0"/>
+                                <Separator orientation="VERTICAL" prefHeight="200.0" />
                                 <VBox prefHeight="479.0" prefWidth="713.0" HBox.hgrow="ALWAYS">
                                     <children>
                                         <HBox alignment="BOTTOM_LEFT" prefHeight="32.0" prefWidth="538.0">
                                             <children>
-                                                <ComboBox prefWidth="150.0" promptText="All Tasks"
-                                                          styleClass="background"/>
+                                                <ComboBox fx:id="tasksSearchCombo" onAction="#taskSearchEvent" prefWidth="150.0" promptText="All Tasks" styleClass="background" />
                                                 <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                                                     <HBox.margin>
-                                                        <Insets right="40.0"/>
+                                                        <Insets right="40.0" />
                                                     </HBox.margin>
                                                     <children>
-                                                        <JFXTextField layoutX="14.0" layoutY="6.0" prefHeight="30.0"
-                                                                      prefWidth="181.0" promptText="Search"
-                                                                      unFocusColor="#757575"
-                                                                      AnchorPane.bottomAnchor="0.0"
-                                                                      AnchorPane.leftAnchor="14.0"
-                                                                      AnchorPane.rightAnchor="30.0"/>
-                                                        <FontAwesomeIconView fill="#4e5d75" glyphName="SEARCH"
-                                                                             layoutX="183.0" layoutY="24.0"
-                                                                             AnchorPane.bottomAnchor="3.0"
-                                                                             AnchorPane.rightAnchor="30.857142448425293"/>
+                                                        <JFXTextField fx:id="searchField" layoutX="14.0" layoutY="6.0" onAction="#taskSearchEvent" prefHeight="30.0" prefWidth="181.0" promptText="Search" unFocusColor="#757575" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="30.0" />
+                                                        <FontAwesomeIconView fill="#4e5d75" glyphName="SEARCH" layoutX="183.0" layoutY="24.0" AnchorPane.bottomAnchor="3.0" AnchorPane.rightAnchor="30.857142448425293" />
                                                     </children>
                                                 </AnchorPane>
-                                                <JFXButton alignment="CENTER_RIGHT" contentDisplay="RIGHT"
-                                                           graphicTextGap="8.0" prefHeight="30.0" prefWidth="146.0"
-                                                           styleClass="main-button" text="Add New Task">
+                                                <JFXButton fx:id="addNewTaskBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" graphicTextGap="8.0" onAction="#AddNewTaskEvent" prefHeight="30.0" prefWidth="146.0" styleClass="main-button" text="Add New Task">
                                                     <graphic>
-                                                        <MaterialDesignIconView fill="WHITE" glyphName="PLAYLIST_PLUS"
-                                                                                size="15"/>
+                                                        <MaterialDesignIconView fill="WHITE" glyphName="PLAYLIST_PLUS" size="15" />
                                                     </graphic>
                                                 </JFXButton>
                                             </children>
                                         </HBox>
-                                        <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0"
-                                                    styleClass="background" VBox.vgrow="ALWAYS">
+                                        <ScrollPane fitToWidth="true" prefHeight="200.0" prefWidth="200.0" styleClass="background" VBox.vgrow="ALWAYS">
                                             <VBox.margin>
-                                                <Insets top="10.0"/>
+                                                <Insets top="10.0" />
                                             </VBox.margin>
                                             <content>
-                                                <VBox spacing="10.0">
-                                                    <children>
-                                                        <HBox layoutX="10.0" layoutY="406.0" prefHeight="66.0"
-                                                              prefWidth="536.0" style="-fx-background-color: white;"/>
-                                                    </children>
-                                                </VBox>
+                                                <VBox fx:id="tasksContainerPane" spacing="10.0" />
                                             </content>
                                         </ScrollPane>
                                     </children>
@@ -142,7 +121,7 @@
                         </HBox>
                     </children>
                     <padding>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                     </padding>
                 </VBox>
             </children>
